--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/harnetlinh/FinalYearProj_BE/issues"
   },
-  "homepage": "https://github.com/harnetlinh/FinalYearProj_BE#readme"
+  "homepage": "https://github.com/harnetlinh/FinalYearProj_BE#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "chalk": "^4.1.0",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "mysql": "^2.18.1"
+  }
 }
